@@ -4,7 +4,7 @@ set JAVA=%~dp0java\bin\java.exe
 set JAR=%~dp0cms-server-@CMS_VERSION@.jar
 
 if not defined JAVA_OPTS (
-    set JAVA_OPTS=-Xms256m -Xmx512m -XX:+UseZGC -XX:+ZGenerational
+    set JAVA_OPTS=-Xms256m -Xmx512m -XX:+UseZGC
 )
 
 "%JAVA%" %JAVA_OPTS% -jar "%JAR%" %*
