@@ -1,8 +1,10 @@
 #!/bin/bash
-DIR=$(dirname "$0")
+set -e
+
+DIR="$(cd "$(dirname "$0")" && pwd)"
 
 if [ -z "$JAVA_OPTS" ]; then
-  JAVA_OPTS="-Xms256m -Xmx512m -XX:+UseZGC -XX:+ZGenerational"
+  JAVA_OPTS="-Xms256m -Xmx512m -XX:+UseZGC"
 fi
 
-"$DIR/java/bin/java" $JAVA_OPTS -jar "$DIR/cms-server-@CMS_VERSION@.jar" "$@"
+exec "$DIR/java/bin/java" $JAVA_OPTS -jar "$DIR/cms-server-8.1.0.jar" "$@"
